external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_labels_1.move
module 0x42::m {
    fun t0() {
        loop 'block': {
            break
        }
    }
}
